# RestApi.prj

./: .env.template  .gitignore  CMakeLists.txt  Dockerfile  Guide_to_run_bd.txt  Guide_to_run_server.txt  Makefile  docker-compose-dev.yaml  docker-compose.yaml  env.txt  main.cpp  requirments.txt
courier/: CMakeLists.txt  courier.cpp  courier.hpp
order/: CMakeLists.txt  order.cpp  order.hpp
postgres-init-db/: init.sql
resources/: orders.txt
routes/: All_routes.hpp  CMakeLists.txt  get_couriers.cpp  get_couriers_id.cpp  get_orders.cpp  get_orders_id.cpp  post_couriers.cpp  post_orders.cpp  post_orders_complete.cpp  utils.cpp
server/: CMakeLists.txt  server.cpp  server.hpp
server-lib/: CMakeLists.txt
server-lib/courier/: courier.cpp  courier.hpp
server-lib/order/: order.cpp  order.hpp
server-lib/resources/: orders.txt
server-lib/routes/: All_routes.hpp  get_orders_id.cpp  post_orders.cpp
server-lib/server/: server.hpp
server-lib/server/tests/: CMakeLists.txt
server/tests/: test_server.cpp
tests/: CMakeLists.txt  api_logs.txt  api_tests.py  tests.cpp
